 - version bump in mix.exs
 - version bump in README.md
 - git tag -a v0.x.x -m "v0.x.x - summary"
 - git push
 - git push --tags
 - mix hex.publish

# CHANGELOG

## v0.*.*

### Enhancements

 - `Chunky.Sequences` - Create, inspect, manipulate, iterate, and compare finite and infinite value sequences
  - New functions:
   - `create/3` - Create a new sequence instance
   - `available/1` - List available sequences from a module
   - `has_next?/1` - Check that a sequence has at least one more available value
   - `is_available?/2` - Check if a specific sequence is available
   - `is_instance/2` - Check if a sequence is an instance of a specific sequence identifier
   - `is_instance/3` - Check if a sequence is an instance of a specific sequence identifier
   - `get_references/1` - Retrieve reference sources and links for a sequence
   - `has_reference?/2 - Check if a sequence has a specific reference source
   - `readable_name/1` - Find the human readable name of a sequence
   - `next/1` - Retrieve the next sequence value and updated sequence struct as a tuple
   - `next!/1` - Retrieve the next sequence as just an updated sequence struct
   - `take/2` - Like `Enum.take/2` - retrieve a list of values from a sequence
   - `take!/2` - Like `take/2`, but only return the updated sequence struct
   - `sequence_for_function/1` - Wrap a function as a sequence - see Developing New Sequences
   - `sequence_for_list/1` - Wrap a list as a sequence - see Developing New Sequences
  - New Sequences:
   - `{Basic, :whole_numbers}` - Whole number sequence, starting from `1` or any other digit
   - `{Basic, :empty}` - The empty sequence
   - `{Basic, :decimal_digits}` - The decimal digits
   - `{OEIS, :a000045}` - OEIS - Fibonacci sequence
   - `{OEIS, :fibonacci}` - OEIS - alternate name, Fibonacci sequence
   - Various test sequences

 
## v0.6.5

### Enhancements

 - `Chunky.Fractions`
  - added `uniq/2` for finding distinct fractions in a list